--- a/assets/epub/titlepage.xhtml
+++ b/assets/epub/titlepage.xhtml
@@ -19,7 +19,7 @@
   <body>
     <div>
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 1441 2200" preserveAspectRatio="none" >
-        <image width="1441" height="2200" xlink:href="cover.png" />
+        <image width="1441" height="2200" xlink:href="COVER_PATH" />
       </svg>
     </div>
   </body>
